--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/pfegit?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/git?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 
 
